<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".mainActivity1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bgd3"
        >
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:textSize="20sp"
            android:text="@string/bienvenue"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="Tous les services de votre banque sur votre mobile avec l'expérience bancaire en ligne la plus appreciée du marché."
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/btn_conn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/shape2"
            android:text="@string/b2"
            android:textColor="@color/jaune"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_insc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/shape1"
            android:text="@string/b1"
            android:textColor="@color/white"

            android:textSize="20sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
